--- a/premium-dine-master/styles/scss/sections/_gathering.scss
+++ b/premium-dine-master/styles/scss/sections/_gathering.scss
@@ -1,4 +1,6 @@
 .gathering {
+  background-color: var(--color-white);
+  
   @media (max-width: $bp-tablet-end) {
     text-align: center;
   }
